<resources>
    <string name="app_name">BananaRecharge</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="vertification_code">Get code</string>
    <string name="hint_vertification_code">Enter confirmation code</string>
    <string name="hint_phone_code">Enter phone code</string>

    <!--home page-->
    <string name="home_page">Home</string>
    <string name="order_page">Order</string>

    <!--order-->
    <string name="order_goods_count">counts : </string>
    <string name="order_time">buy time :  </string>
    <string name="oder_trade_num">trade number :  </string>
    <string name="oder_card_code">card code :  </string>
    <string name="oder_web_address">web address :  </string>
    <string name="order_copy">copy</string>
    <string name="order_click_buy">click to buy</string>

    <string name="goods_info_edittext_hint">Enter recharge account</string>
    <string name="charge_account">Account recharge</string>
    <string name="buy_count">Purchase quantity</string>
    <string name="redemption_process">Redemption process</string>
    <string name="direct_buy">Direct purchase</string>
    <string name="share_buy">Purchase sfter share</string>

    <string name="pay_type">pay type</string>
    <string name="wachat_pay">Wachat pay</string>
    <string name="ali_pay">Ali pay</string>
    <string name="buy_now">Buy now</string>
    <string name="should_pay">Shoule pay :</string>

    <string name="detail">Detaitls</string>
    <string name="pay">Pay</string>
    <string name="pay_success">Pay Success</string>

    <string name="umeng_socialize_sharetosina">分享到新浪微博</string>
    <string name="umeng_socialize_sharetodouban">分享到豆瓣</string>
    <string name="umeng_socialize_sharetorenren">分享到人人网</string>

    <string name="umeng_socialize_sharetotencent">分享到腾讯微博</string>
    <string name="umeng_socialize_sharetotwitter">分享到twitter</string>
    <string name="umeng_socialize_sharetolinkin">分享到领英</string>
</resources>
