<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_margin_edge"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/order_title_layout_margin_edge"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/goods_pic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/title_panel_back_normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/goods_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="aaaaa"
                            android:textColor="@color/title_text_color"
                            android:textSize="@dimen/order_goods_title_text_size" />

                        <TextView
                            android:id="@+id/goods_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="bbbb"
                            android:textColor="@color/main_theme_color"
                            android:textSize="@dimen/order_goods_title_text_size" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/goods_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_goods_count"
                            android:textColor="@color/order_goods_sub_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />

                        <TextView
                            android:id="@+id/count_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                            android:text="dddd"
                            android:textColor="@color/order_goods_sub_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/order_title_layout_margin_edge"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center"
                        android:src="@drawable/time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                        android:text="@string/order_time"
                        android:textColor="@color/order_goods_sub_text_color"
                        android:textSize="@dimen/order_goods_sub_title_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                        android:text="fffff"
                        android:textColor="@color/order_goods_info_text_color"
                        android:textSize="@dimen/order_goods_sub_title_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center"
                        android:src="@drawable/order_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                        android:text="@string/oder_trade_num"
                        android:textColor="@color/order_goods_sub_text_color"
                        android:textSize="@dimen/order_goods_sub_title_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="fffff"
                        android:textColor="@color/order_goods_info_text_color"
                        android:textSize="@dimen/order_goods_sub_title_text_size" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center"
                            android:src="@drawable/code" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                            android:text="@string/oder_card_code"
                            android:textColor="@color/order_goods_sub_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                            android:text="fffff"
                            android:textColor="@color/order_goods_info_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/order_copy"
                        android:textColor="@color/main_color_blue"
                        android:textSize="@dimen/order_goods_sub_title_text_size" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center"
                            android:src="@drawable/web" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                            android:text="@string/oder_web_address"
                            android:textColor="@color/order_goods_sub_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                            android:text="fffff"
                            android:textColor="@color/order_goods_info_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/order_click_buy"
                        android:textColor="@color/main_color_blue"
                        android:textSize="@dimen/order_goods_sub_title_text_size" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>