<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ape.bananarecharge.PayActivity">

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout_height" />

    <LinearLayout
        android:id="@+id/goods_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pay_cardview_margin_top_bottom"
            android:layout_marginLeft="@dimen/pay_cardview_margin_edge"
            android:layout_marginRight="@dimen/pay_cardview_margin_edge"
            android:layout_marginTop="@dimen/pay_cardview_margin_top_bottom"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/order_title_layout_margin_edge"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/goods_pic"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/goods_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="aaaaa"
                            android:textColor="@color/title_text_color"
                            android:textSize="@dimen/order_goods_title_text_size" />

                        <TextView
                            android:id="@+id/goods_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="bbbb"
                            android:textColor="@color/main_theme_color"
                            android:textSize="@dimen/order_goods_title_text_size" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/goods_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_goods_count"
                            android:textColor="@color/order_goods_sub_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />

                        <TextView
                            android:id="@+id/count_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/order_title_layout_margin_edge"
                            android:text="dddd"
                            android:textColor="@color/order_goods_sub_text_color"
                            android:textSize="@dimen/order_goods_sub_title_text_size" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pay_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goods_info_layout"
        android:background="@color/status_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pay_cardview_margin_edge"
            android:text="@string/pay_type"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/goods_sub_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pay_type_text"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pay_cardview_margin_edge"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/wachat_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/pay_cardview_margin_edge"
                android:src="@drawable/wachat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/wachat_pic"
                android:text="@string/wachat_pay" />

            <ImageView
                android:id="@+id/wachat_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/select" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pay_cardview_margin_edge"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/alipay_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/pay_cardview_margin_edge"
                android:src="@drawable/alipay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/alipay_pic"
                android:text="@string/ali_pay" />

            <ImageView
                android:id="@+id/ali_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/select" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/MainTextStlye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/should_pay" />

            <TextView
                android:id="@+id/bottom_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pay_cardview_margin_edge"
                android:text="aaaa"
                android:textColor="@color/main_theme_color"
                android:textSize="@dimen/goods_main_text_size" />
        </LinearLayout>


        <Button
            android:id="@+id/buy_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/goods_info_background"
            android:text="@string/buy_now"
            android:textColor="@color/login_text_color"
            android:textSize="@dimen/goods_main_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_wait_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/pay_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="正在跳转...."
            android:layout_below="@+id/pay_wait"
            android:gravity="center"
            android:textSize="@dimen/goods_main_text_size"
            android:textColor="@color/main_theme_color"/>
    </RelativeLayout>
</RelativeLayout>
